--- a/css/fsc.css
+++ b/css/fsc.css
@@ -134,16 +134,86 @@ h3 {
   margin-bottom: 0;
 }
 
+.tt-dropdown-menu {
+  margin-top: 2px;
+  padding: 5px 0;
+  text-align: left;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion {
+  padding: 3px 20px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.tt-suggestion.tt-is-under-cursor {
+  color: #fff;
+  background-color: #0081c2;
+  background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+  background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+  background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+  background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+  background-repeat: repeat-x;
+}
+.tt-suggestion.tt-is-under-cursor a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+}
+
+.tt-suggestion p {
+  margin: 0;
+}
+
+/*
+ * activite
+ */
+.page-activite .referents {
+  padding:10px 12px 0;
+  margin-bottom: 20px;
+  border:1px solid #dedede;
+  border-radius:3px;
+}
+
+.page-activite .description {
+  margin-top: -10px;
+}
+
 /*
  * mediqueries
  */
 @media (max-width: 979px) {
-  header {
-    /*margin-top: -20px;*/
+  header img {
+    max-width: 150px;
+    display: inline;
+    float: none;
   }
   header h1 {
+    font-size: 40px !important;
     line-height: 1;
+    margin-left: 0;
   }
+  header h1 span.bezannes {
+    font-size: 35px !important;
+  }
+
+  .page-activite .description {
+    margin-top: 0;
+  }
+  .page-activite .container img {
+    max-width: 90%;
+  }
+
   .carousel .item {
     height: 500px !important;
   }
@@ -161,22 +231,18 @@ h3 {
 
 @media (max-width: 767px) {
   header {
-    margin-left:-20px;
-    margin-right:-20px;
+    margin-left: -20px;
+    margin-right: -20px;
   }
-  header img {
-    max-width: 150px;
-    display: inline;
-    float: none;
-  }
+
   header h1 {
-    font-size: 40px !important;
-    line-height: 1;
-    margin-left: 0;
+    display: none;
   }
-  header h1 span.bezannes {
-    font-size: 35px !important;
+
+  .page-activite .span {
+    padding-top: 20px;
   }
+
   .carousel {
     margin-left: -20px;
     margin-right: -20px;
@@ -185,6 +251,12 @@ h3 {
     height: 300px !important;
   }
   .carousel img {
-    height: 300px;
+    height: 300px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel-caption {
+    position: absolute !important;
   }
 }
