--- a/css/common.css
+++ b/css/common.css
@@ -56,6 +56,10 @@ h3 {
   margin-bottom: 25px;
 }
 
+.center {
+  text-align: center;
+}
+
 /* typeahead */
 .tt-dropdown-menu {
   margin-top: 2px;
