--- a/public/css/fsc.css
+++ b/public/css/fsc.css
@@ -23,7 +23,7 @@ header h1 {
   display: inline-block;
   font-size: 50px;
   margin-top: 0;
-  margin-left: 50px;
+  margin-left: 40px;
   line-height: 75px;
   letter-spacing: -1;
 }
@@ -216,8 +216,8 @@ h3 {
   }
   header h1 {
     font-size: 40px !important;
-    line-height: 1;
-    margin-left: 0;
+    /*line-height: 1;*/
+    margin-left: 20px;
   }
   header h1 span.bezannes {
     font-size: 35px !important;
