--- a/public/css/common.css
+++ b/public/css/common.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  /*font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;*/
 }
 
 h2 {
