Update IE hack CSS

--- a/public/css/fsc.ie.css
+++ b/public/css/fsc.ie.css
@@ -1,11 +1,7 @@
-/* public */
+/*
+ * IE, you bastard!
+ */
 
-.page-activites .all img {
+.page-activites .all h4 {
   background: #333;
-}
-
-/* gestion */
-
-textarea#description {
-  clear: both;
 }
