--- a/public/css/fsc.css
+++ b/public/css/fsc.css
@@ -128,6 +128,7 @@ h3 {
 /*
  * a-propos
  */
+.page-en-savoir-plus .nav-a-propos, 
 .page-a-propos .nav-a-propos {
   margin-top: -10px;
   margin-bottom: 50px;
@@ -166,7 +167,7 @@ h3 {
   bottom: -10px;
   left: 5px;
   padding: 8px;
-  background: none repeat scroll 0% 0% rgba(0, 0, 0, .5);
+  background: none repeat scroll 0% 0% rgba(0, 0, 0, .6);
   -webkit-transition: background 0.6s ;
   -moz-transition: background 0.6s ;
   -ms-transition: background 0.6s ;
@@ -174,7 +175,7 @@ h3 {
   transition: background 0.6s ;
   }
 .page-activites .all a:hover h4 {
-  background: none repeat scroll 0% 0% rgba(0, 0, 0, .9);
+  background: none repeat scroll 0% 0% rgba(0, 0, 0, .95);
 }
 .page-activites .all a:hover img {
   opacity: 1;
