--- a/public/css/common.css
+++ b/public/css/common.css
@@ -100,6 +100,9 @@ div.execution {
   line-height: 12px;
   text-align: right;
   background: rgba(0, 0, 0, .7);
+  -webkit-border-radius: 4px 0 0 0;
+     -moz-border-radius: 4px 0 0 0;
+          border-radius: 4px 0 0 0;
 }
 
 /* typeahead */
